--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -69,7 +69,7 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Istio</h1>
+      <h2 class="mt-6"></h2>
       {% block content %}
 
 
