chart prepared for canary

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,7 +3,8 @@
   Home Page
 {% endblock %}
 {% block content %}
-This Micro Website is for Istio testing
+
+This Micro Website is for Istio testing v2
 
 {% endblock %}
 
